# weer

./: Cargo.toml
src/: main.rs
src/app/: cmd.rs  handler.rs  image.rs  mod.rs
src/app/cli/: cmd.rs  mod.rs  tables.rs
weer_api/: Cargo.toml  LICENSE  README.md
weer_api/src/: lang.rs  lib.rs  query.rs
weer_api/src/api/: base_api.rs  forecast.rs  future.rs  history.rs  mod.rs  realtime.rs  search.rs
weer_api/src/models/: current.rs  forecast.rs  mod.rs
