[package]
name = "weer"
version = "0.1.0"
edition = "2021"
authors = ["Gael (@Gael-devv)"]
description = "cli that gives you the weather"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "weer_api",
]

[dependencies]
weer_api = { path = "weer_api" }
clap = { version = "3.2.17", features = ["cargo"] }
serde = { version = "1.0.141", features = ["derive"] }
prettytable-rs = "0.9.0"
serde_json = "1.0"
exitcode = "1.1.2"
confy = "0.5.1"
artem = "1.1.5"
ureq = "2.4.0"
image = "0.24.2"
colored = "2.0.0"
