[package]
name = "weer_api"
version = "0.1.0"
edition = "2021"
description = "A wrapper library for using Weather API"
license = "MIT"
readme = "README.md"
keywords = ["weather"]
categories = ["api-bindings"]
repository = "https://github.com/Gael-devv/weer/weer_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0", features = ["json", "charset"] }
url = "2.2.2"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
